# constellation

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  build-agents-runtime.sh  build-agents.sh  conftest.py  docker-compose-v2.rancher.yml  docker-compose-v2.yml  docker-compose.v2.rancher.yml  docker-compose.yml  pyproject.toml  start.sh  stop.sh
.github/: copilot-instructions.md
.playwright-mcp/: page-2026-05-20T16-49-16-857Z.yml  page-2026-05-20T16-49-52-139Z.yml  page-2026-05-20T16-53-33-746Z.yml  page-2026-05-20T16-56-31-597Z.yml  page-2026-05-20T17-00-52-896Z.yml  page-2026-05-30T12-58-18-760Z.yml  page-2026-05-30T16-15-06-699Z.yml  page-2026-05-30T16-18-19-127Z.yml  page-2026-05-30T16-45-10-426Z.yml  page-2026-05-30T16-45-34-062Z.yml
agents/: __init__.py  log_store
android/: .env.example  Dockerfile  Dockerfile.claude-code  Dockerfile.connect-agent  Dockerfile.copilot-cli  __init__.py  agent-card.json  agentic_workflow.py  app.py  app_cli.py  prompts.py  registry-config.json  workflow.py
bitbucket/: .env.example  Dockerfile  __init__.py  agent-card.json  app.py  registry-config.json
certs/: README.md
common/: .env.example  __init__.py  agent_bus.py  agent_directory.py  agent_system_prompt.py  android_agentic_workflow.py  artifact_store.py  circuit_breaker.py  command_gate.py  compass_agentic_workflow.py  compass_completeness.py  compass_office_routing.py  devlog.py  env_utils.py  install_slug.py  instance_reporter.py  launcher.py  launcher_rancher.py  llm_client.py  message_utils.py  office_agentic_workflow.py  orchestrator.py  per_task_exit.py  policy.py  prompt_builder.py  registry_client.py  registry_store.py  rules_loader.py  skills_catalog.py  startup_backoff.py  task_permissions.py  task_store.py  (+3 more)
(+754 files in other folders)
