[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constellation"
version = "2.0.0"
description = "Constellation multi-agent system"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "pdfplumber>=0.11.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "pyxlsb>=1.0.10",
    "striprtf>=0.0.29",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "live: marks tests as requiring live external services (Jira, SCM, Figma, LLM)",
]

[tool.setuptools.packages.find]
include = ["framework*", "agents*", "plugins*"]
